# utils

./: build.py  install.sh  pyproject.toml
config/: backup_ignore
scripts/: btrfs_mount.sh  btrfs_show.sh  honda_proxy
src/utils/: backup.py  blconnect.py  capture.py  display.py  kernel_info.py  menue.py  remote.py  scan.py  sound.py  soundcloud_renamer.py  wakeup.py  wallpaper.py  ytd.py
src/utils/_backup/: config.py  host.py
src/utils/helper/: display.py  notify.py  process.py  xrandr_command.py
